# didactic-invention

./: .coverage  .gitignore  README.md  docker-compose.yml  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  build.yaml
src/: lambda_csv_count.py
terraform/: dynamo.tf  lambda.tf  main.tf  providers.tf  roles.tf  s3.tf  triggers.tf
tests/: test_lambda_csv_count.py
