[tool.poetry]
name = "didactic-invention"
version = "0.1.0"
description = ""
authors = ["Phat Pham <phatpham01228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.13"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
pytest-html = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
